# rocm-cmake

./: .gitignore  CMakeLists.txt  CMakePresets.json
cmake/Modules/: rocm-cmakeOptions.cmake
share/rocmcmakebuildtools/cmake/: ROCMSetupVersion.cmake  ROCmDefaults.cmake  ROCmOptions.cmake
